# ff-cpp-sdl

./: .gitignore  CMakeLists.txt  README.md
src/: FF2.cpp  MOUSE.H  ff2.h  ff_constants.h  i_graphics_middleware.h  i_logic_middleware.h  main.cpp
